# qpixlpp

./: .gitignore  CMakeLists.txt  README.md  license.txt
2025-paper-EHands-math/circuits/: Readme  atan_poly_3-aachen_circ.qpy  atan_poly_3-marrakesh_circ.qpy  exp_poly_5-aachen_circ.qpy  power2_poly_2-aachen_circ.qpy  power3_poly_3-aachen_circ.qpy  read_qpy_circ.py
2025-paper-EHands-math/experiments/: Readme  arctan_ibm_kingston_3ed9cr.h5  ideal_atan5x_p5.h5  ideal_gauss9x_p6.h5  reLu_ibm_aachen_2ea18j.h5  read_exp_h5.py  x2_ibm_kingston_3h6mfb.h5  x2_ibm_marrakesh_3nw736.h5
doc/doxygen/: doxygen.dox.in
doc/doxygen/pages/: Overview.txt
examples/: CMakeLists.txt  Example1.pgm  Example2.pgm  Example3.pgm  Example4.pgm  Example5.pgm  compressedFRQI.cpp
examples/2025-paper-EHands-math/: Readme
examples/2025-paper-EHands-math/circuits/: atan_poly_3-aer_ideal_circ.qpy  atan_poly_5-aachen_circ.qpy  gauss_poly_6-aachen_circ.qpy
examples/2025-paper-EHands-math/experiments/: arctan_ibm_aachen_23enfb.h5  arctan_ibm_marrakesh_3k2c8j.h5  ideal_exp2x_p5.h5  reLu_ibm_kingston_3g6rvp.h5  reLu_ibm_marrakesh_3n7ceh.h5  x2_ibm_aachen_3ssz8j.h5
examples/2025-paper-EHands-math/math/: EHands-circuits.nb  Readme
examples/SciRep2024_QBArt_QCrank_Data/: Readme  fig3_aria.npy  fig3_guadalupe.npy  fig3_harmony.npy  fig3_ideal.npy  fig3_jakarta.npy  fig3_montreal.npy  fig3_qtuum_h1_1.npy  fig4_dna_seq.txt  fig5_int_seq.txt  fig6_Cspiral.txt  fig7_LblLogo.txt
include/qpixl/: pgm.hpp  util.hpp
include/qpixl/frqi/: circuit.hpp  util.hpp
test/: CMakeLists.txt  pgm.cpp  run.cpp  util.cpp
test/frqi/: circuit.cpp  sfwht_gray.cpp  util.cpp
